temp/grafana-helm-demo/podinfohttproute.yaml
# route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-main
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: grafana
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-grafana
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: grafana
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
